--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap');
 @import "tailwindcss";
+
+@font-face {
+  font-family: 'Griffy';
+  src: url('./assets/Griffy/Griffy-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+@theme {
+  --font-griffy: "Griffy", cursive;
+  --font-space-grotesk: "Space Grotesk", sans-serif;
+}
